--- a/pages/competitions/index.html
+++ b/pages/competitions/index.html
@@ -110,7 +110,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Yanthrix/Trekkon[1].pdf" download="Trekkon"><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -158,7 +158,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Yanthrix/Drone Challenge.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -197,7 +197,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Yanthrix/Robo wars.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -234,7 +234,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Yanthrix/Robo Race.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -272,7 +272,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Yanthrix/Kick off.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -314,7 +314,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Yanthrix/Boat Challenge.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -398,7 +398,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Coding Events/CODE HASTEN-1.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -524,7 +524,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Core events/Copy of AUTOCAD.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -560,7 +560,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Core events/Colloquia_Mechanical (2).pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -598,7 +598,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Core events/Colloquia Electrical.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -646,7 +646,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Core events/CSE_Colloquia.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -719,7 +719,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Core events/truss the frame_sukeerthi.pdf" download="truss the frame"><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -768,7 +768,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Executive suite/Auction wars.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -806,7 +806,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Executive suite/BIZ PITCH.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -844,7 +844,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Executive suite/DataDetectiveChallenge.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -1068,7 +1068,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Lan Wars/FREE FIRE MAX MOBILE RULEBOOK.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -1107,7 +1107,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Lan Wars/VALORANT.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -1145,7 +1145,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Lan Wars/BGMI -Maneesh.pdf" download="BGMI"><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -1182,7 +1182,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Lan Wars/CLASH ROYALE.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -1232,7 +1232,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Quizzaire.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
@@ -1273,7 +1273,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/YOU VLOG WISS'24.pdf" download><span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
