competetions ,  teampage , accomdations , workshops change

--- a/pages/accomdations/day2.html
+++ b/pages/accomdations/day2.html
@@ -76,10 +76,6 @@
     </button>
     <div class="data">
     </div>
-    <button class="content">accommodation(workshop)
-    </button>
-    <div class="data">
-    </div>
     <button class="content">Day -2 pass
     </button>
     <div class="data">
@@ -94,7 +90,7 @@
     </button>
     <div class="data"></div>
   </main>
-  <div class="bigdata"></div>
+  <div class="bigdata" style="padding-bottom: 10vh;"></div>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
   <script>
@@ -125,66 +121,20 @@
       <b style="color:aqua">Charges for 2 days and 3 nights </b>:<br>
       Common room- 1249 Rs/-<br>
       Single room-1649 Rs/-<br></div>
-      <div class="btn-container">
-      <a href="https://rzp.io/l/W2dayAcc"
-        style="display: flex;justify-content: center;text-decoration: underline;columns: #dadada;">
-          <button class="btn custom-btn btn-5 register">
-            <span style="align-items:center"> click
-        here</span>
-          </button></a>
+      <div>
+        <b style="color:aqua">Charges for 3 days and 4 nights</b> :<br>
+      Common room- 1449 Rs/-<br>
+      Single room-1849 Rs/-<br></div>
         </div>
         </div>
         <br><br>
-      <div class="lvl" style="display:flex"><div>
-      <b style="color:aqua">Charges for 3 days and 4 nights</b> :<br>
-      Common room- 1449 Rs/-<br>
-      Single room-1849 Rs/-<br></div>
       <div class="btn-container">
       <a href="https://rzp.io/l/W3daysAcc"
         style="display: flex;justify-content: center;text-decoration: underline;columns: #dadada;">
           <button class="btn custom-btn btn-5 register">
             <span style="align-items:center"> click
-        here</span>
+        here</span></div>
           </button></a>
-        </div></div>
-        <br><br>
-      <b>NOTE</b>:<br>1. Extra charges of Rs.250 for food per day (Includes breakfast, lunch &
-dinner) should be paid separately prior to visiting campus if required.<br>
-2. In Single rooms a maximum of 2 members will be accommodated.<br>
-3. In Common rooms a maximum of 12 members will be accommodated.`,
-        ` <b style="margin-bottom: 50px;">THIS IS ONLY FOR WORKSHOP ATTENDIES</b>
-        <br>
-        <br>
-      <ul>
-        <li>Includes STARNITE pass.</li>
-        <li>Includes Day-2 and Day-3 Events & Competitions pass.</li>
-        <li>Free access to all the exhibits.</li>
-        <li>Free access to few informal games.</li>
-      </ul><br>
-      <div class="lvl" style="display:flex"><div>
-        <b style="color:aqua">Charges for 2 days and 3 nights </b>:<br>
-      Common room- 749 Rs/-<br>
-      Single room-1249 Rs/-<br><br></div>
-      <div class="btn-container">
-      <a href="https://rzp.io/l/W2dayworkacc"
-        style="display: flex;justify-content: center;text-decoration: underline;">
-          <button class="btn custom-btn btn-5 register">
-            <span style="align-items:center"> click
-        here</span>
-          </button></a>
-        </div></div>
-      <br><br>
-      <div class="lvl" style="display:flex"><div><b style="color:aqua">Charges for 3 days and 4 nights </b>:<br>
-      Common room- 1049 Rs/-<br>
-      Single room-1449 Rs/-<br></div>
-      <div class="btn-container">
-      <a href="https://rzp.io/l/Wworkacc3d"
-        style="display: flex;justify-content: center;text-decoration: underline;">
-          <button class="btn custom-btn btn-5 register">
-            <span style="align-items:center"> click
-        here</span>
-          </button></a>
-        </div></div>
         <br><br>
       <b>NOTE</b>:<br>1. Extra charges of Rs.250 for food per day (Includes breakfast, lunch &
 dinner) should be paid separately prior to visiting campus if required.<br>
