--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                   </a>
                 </li>
                 <li class="nav-item hidden">
-                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/under-construction-template-master/index.html">
+                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/teampage/">
                     <span style="font-family: 'MyFont'; color: white">TEAM</span>
                   </a>
                 </li>
