--- a/pages/workshops/index.html
+++ b/pages/workshops/index.html
@@ -112,7 +112,7 @@
             <a href="./Webpages/index.html" style="text-decoration: none;color: aliceblue; width: 260px;" >
               <button>Know More</button>
             </a>
-            <a href="https://rzp.io/l/Wwebdev" style="text-decoration: none;color: aliceblue; width:260px">
+            <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
               <button>
                 Register
               </button>
@@ -137,7 +137,7 @@
                 style="text-decoration: none;color: aliceblue; width: 260px;">
                 <button>Know More</button>
             </a>
-            <a href="https://rzp.io/l/Wcyber" style="text-decoration: none;color: aliceblue; width:260px">
+            <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
               <button>
                 Register
               </button>
@@ -162,7 +162,7 @@
             <a href="./Webpages/Artificial_Intelligence_&_Machine_Learning.html"
                 style="text-decoration: none;color: aliceblue; width: 260px;"><button onclick="">Know More</button>
             </a>
-            <a href="https://rzp.io/l/Waiml" style="text-decoration: none;color: aliceblue; width:260px">
+            <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
               <button>
                 Register
               </button>
@@ -186,7 +186,7 @@
             <a href="./Webpages//Product_Management_and_Risk_Analysis_using_Oracle_Primavara.html"
                 style="text-decoration: none;color: aliceblue; width: 260px;"><button onclick="">Know More</button>
             </a>
-                <a href="https://rzp.io/l/WProject" style="text-decoration: none;color: aliceblue; width:260px">
+                <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
                   <button>
                     Register
                   </button>
@@ -211,7 +211,7 @@
             <a href="./Webpages/Embedded_systems_with_Robotics_&_IoT.html"
                 style="text-decoration: none;color: aliceblue; width: 260px;"><button onclick="">Know More</button>
             </a>
-            <a href="https://rzp.io/l/Wembedd" style="text-decoration: none;color: aliceblue; width:260px">
+            <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
               <button>
                 Register
               </button>
@@ -236,7 +236,7 @@
             <a href="./Webpages/ui.html"
                 style="text-decoration: none;color: aliceblue; width: 260px;"><button onclick="">Know More</button>
             </a>
-            <a href="https://rzp.io/l/Wproduct" style="text-decoration: none;color: aliceblue; width:260px">
+            <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
               <button>
                 Register
               </button>
@@ -261,7 +261,7 @@
             <a href="./Webpages/ds.html"
                 style="text-decoration: none;color: aliceblue; width: 260px;"><button onclick="">Know More</button>
             </a>
-            <a href="https://rzp.io/l/WDataSC" style="text-decoration: none;color: aliceblue; width:260px">
+            <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
               <button>
                 Register
               </button>
@@ -286,7 +286,7 @@
             <a href="./Webpages/dm.html"
             style="text-decoration: none;color: aliceblue; width: 260px;"><button onclick="">Know More</button>
             </a>
-            <a href="https://rzp.io/l/Wdigimar" style="text-decoration: none;color: aliceblue; width:260px">
+            <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
               <button>
                 Register
               </button>
@@ -311,7 +311,7 @@
             <a href="./Webpages/rc.html"
                 style="text-decoration: none;color: aliceblue; width: 260px;"><button onclick="">Know More</button>
             </a>
-            <a href="https://rzp.io/l/WRCair" style="text-decoration: none;color: aliceblue; width:260px">
+            <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
               <button>
                 Register
               </button>
