--- a/pages/competitions/index.html
+++ b/pages/competitions/index.html
@@ -488,10 +488,6 @@
           </div>
         </label>
       </div>
-
-    </div>
-    <div class="grid">
-      <div></div>
       <div class="card">
         <input id="card18" type="checkbox">
         <label class="tgl-btn" for="card18"><span></span></label>
@@ -528,7 +524,6 @@
           </div>
         </label>
       </div>
-      <div></div>
     </div>
   </div>
 
@@ -952,17 +947,6 @@
     </div>
   </div>
 
-  <div class="container">
-
-
-    <h1>PREFEST</h1>
-
-    <div class="grid">
-
-
-    </div>
-
-  </div>
 
   <div class="container">
 
@@ -1259,7 +1243,7 @@
   <div class="container">
 
 
-    <h1>ONLINE</h1>
+    <h1>OTHER</h1>
 
 
     <div class="grid">
