about us and competetions

--- a/pages/about_us/index.html
+++ b/pages/about_us/index.html
@@ -44,7 +44,8 @@
   </nav>
   <div style="left: 0;width: 10vw;">
     <a class="img" href="../../index.html">
-      <img src="../../imagesnew/wissicon.png" alt=""  style="left:5% !important;position: absolute;width:min(10vh,15vw) ; top: 2.5%;">
+      <img src="../../imagesnew/wissicon.png" alt=""
+        style="left:5% !important;position: absolute;width:min(10vh,15vw) ; top: 2.5%;">
     </a>
   </div>
   <div class="containerg lap">
@@ -82,30 +83,27 @@
     <div id="abt" class="p-3 d-flex flex-column align-items-center justify-content-center">
       <h1 class="display-5 fw-bold">About Us</h1>
 
-      <p>
-        WISSENAIRE, The annual Techno-Management Fest OF IIT BHUBANESWAR is
-        one of the biggest of its kind in east India. This three-day event,
-        whcih spans a variety of Technological, Scientific, and Managerial
-        Fields, Guides Participants through the World of cutting-edge
-        Innovations. Every year, WISSENAIRE adopts a new topic in order to
-        stay up with all the Advancements that occur. This year, our topic is
-        from bullocks to Bullet Trains, Transportation has advanced quickly
-        throughout the years. Due to recent advancements, it is not much
-        simpler to travel Internationally, Millitary Vehicles have greatly
-        imrpoved to enable Countries to have a better Defence, and remote
-        places are now connected to major cities making it easier to provide
-        better living circumstances to rural Populations.
+      <p>Wissenaire, the annual techno-management fest of IIT Bhubaneswar is one of the biggest of its kind in East
+        India. This three-day event takes the participants into the world of cutting-edge innovations. Wissenaire adopts
+        a new theme every year. Our theme this year is 'Pacem Strife'. Our motto in choosing this theme is to highlight
+        the importance of defence technology as a deterrent to aggression and to promote national security. Defence
+        technology is key to national security as it ensures a robust and advanced defence infrastructure. It acts as a
+        crucial shield, fostering stability and deterring adversaries, ultimately contributing to the protection and
+        sovereignty of a nation.
       </p>
     </div>
   </div>
   <div id="map" class="d-flex justify-content-center" style="margin-bottom: 10vh;">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14982.815215749466!2d85.65567915!3d20.146401049999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a19ac2e52a057f5%3A0x564b6e83a7504a16!2sIndian%20Institute%20Of%20Technology%20(IIT)%20Bhubaneswar!5e0!3m2!1sen!2sin!4v1707931204189!5m2!1sen!2sin"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" style="height: 400px; width: min(90vw,400px); padding:10px;margin-bottom:10px;z-index: 0; border-radius: 20px;"></iframe>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14982.815215749466!2d85.65567915!3d20.146401049999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a19ac2e52a057f5%3A0x564b6e83a7504a16!2sIndian%20Institute%20Of%20Technology%20(IIT)%20Bhubaneswar!5e0!3m2!1sen!2sin!4v1707931204189!5m2!1sen!2sin"
+      allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+      style="height: 400px; width: min(90vw,400px); padding:10px;margin-bottom:10px;z-index: 0; border-radius: 20px;"></iframe>
   </div>
   <script src="../../js/script.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
   <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
-  
+
 
   <script>
     (function () {
