--- a/pages/competitions/index.html
+++ b/pages/competitions/index.html
@@ -1205,8 +1205,12 @@
             <img src="../../imagesnew/clash.jpg">
           </div>
           <h2 class="card-title">Clash Royale</h2>
-          <p class="card-detail">Just add your desired image size (width & height) after our URL, and you'll get a
-            random image.https://picsum.photos/200/300<br>
+          <p class="card-detail">Clash Royale, a game of cunning strategy and fierce battles, has
+            captured the hearts of gamers worldwide. In this tournament, you have
+            the chance to engage in epic duels, showcase your skills, strategy, and
+            mastery of the game, tactical brilliance and etch your name in the
+            annals of Clash Royale history. In this real-time strategy game, players
+            create decks, collect powerful cards, and engage in thrilling head-tohead battles<br>
             Registration fee: <b style="color: #18116B !important; font-size: 16px;">&#8377 99</b>
           </p>
           <div class=" but">
