competetion image and data change

--- a/pages/competitions/index.html
+++ b/pages/competitions/index.html
@@ -291,7 +291,7 @@
         <label class="tgl-btn" for="card27"><span></span></label>
         <label for="card27" class="tgl-view">
           <div class="card-image">
-            <img src="../../imagesnew/css.jpg">
+            <img src="./js/28_sept_19_13.jpg">
           </div>
           <h2 class="card-title">Boat Race</h2>
           <p class="card-detail">"Straight roads are for fast cars, turns are for fast drivers.".
@@ -459,8 +459,7 @@
             <img src="../../imagesnew/css.jpg">
           </div>
           <h2 class="card-title">Web Hackathon</h2>
-          <p class="card-detail">Just add your desired image size (width & height) after our URL, and you'll get a
-            random image.https://picsum.photos/200/300 <br>
+          <p class="card-detail">Rules to be announced soon <br>
             Note: this event is conducted on both the days
           </p>
 
