team , accomidation page change

--- a/pages/accomdations/day3.html
+++ b/pages/accomdations/day3.html
@@ -141,7 +141,7 @@ dinner) should be paid separately prior to visiting campus if required.<br>
 2. In Single rooms a maximum of 2 members will be accommodated.<br>
 3. In Common rooms a maximum of 12 members will be accommodated.`,
         `
-        <b>prize</b>: 299 Rs
+        <b>Just at</b>: 299 Rs
         <br><br>
         This package includes entry to all competitions on <b style="color:aqua">March 9th </b> along with 2 informal games and all
       exhibits. If you would also like accommodations, you can select that option when making your payment
@@ -197,7 +197,7 @@ few informal games and all exhibits.
 
       `,
         `
-        <b>prize</b>: 399 Rs
+        <b>Just at</b>: 399 Rs
         <br><br>
         This package includes entry to all competitions on <b style="color:aqua">March 10th </b>along with 2 informal games and all
       exhibits. If you would also like accommodations, you can select that option when making your payment
@@ -251,7 +251,7 @@ workshops or accommodation.<br>2. Day 3 pass includes entry to STARNITE, all com
 along with few informal games and all exhibits.
 
 `, `
-      <b>prize</b>:500 Rs
+      <b>Just at</b>:500 Rs
       <br><br>
       -includes breakfast ,lunch and dinner for 2 days
       <div class="btn-container">
