--- a/pages/teampage/index.html
+++ b/pages/teampage/index.html
@@ -961,7 +961,7 @@
         <div class="glass"></div>
         <div class="content">
           <span class="title">Prabhav</span>
-          <span class="text">Tream Branding</span>
+          <span class="text">Team Branding</span>
         </div>
         <div class="bottom">
           <div class="social-buttons-container">
@@ -1300,7 +1300,7 @@
       </div>
     </div>
   </div>
-  <h1 class="heading">Competetions</h1>
+  <h1 class="heading">Competitions</h1>
   <div class="cards1">
     <div class="parent">
       <div class="card">
@@ -1312,7 +1312,7 @@
         <div class="glass"></div>
         <div class="content">
           <span class="title">A.V.S.S.P</span>
-          <span class="text">Team Competetions</span>
+          <span class="text">Team Competitions</span>
         </div>
         <div class="bottom">
           <div class="social-buttons-container">
@@ -1355,7 +1355,7 @@
         <div class="glass"></div>
         <div class="content">
           <span class="title">Ravi Shankar</span>
-          <span class="text">Team Competetions</span>
+          <span class="text">Team Competitions</span>
         </div>
         <div class="bottom">
           <div class="social-buttons-container">
@@ -2159,19 +2159,19 @@
                 </path>
               </svg>
             </button>
-            <button class="social-button .social-button2" onclick="window.location.href='https://www.linkedin.com/in/mukesh-kumar-b56272247?trk=contact-info';">
+            <button class="social-button .social-button2" onclick="window.location.href='https://www.linkedin.com/in/paladri-pranitha-88a472254'">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg">
                 <path
                   d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z" />
               </svg>
             </button>
-            <button class="social-button .social-button3" onclick="window.location.href='mailto:21me01045@iitbbs.ac.in';">
+            <button class="social-button .social-button3" onclick="window.location.href='21cs01037@iitbbs.ac.in';">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg">
                 <path
                   d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
               </svg>
             </button>
-            <button class="social-button .social-button3" onclick="window.location.href='tel:+917842857268';">
+            <button class="social-button .social-button3" onclick="window.location.href='tel:+916305411682';">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg">
                 <path
                   d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z" />
