--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </a></li>
                 <li class="nav-item hidden">
                 <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/competitions/">
-                  <span style="font-family: 'MyFont'; color: white">COMPETETIONS</span>
+                  <span style="font-family: 'MyFont'; color: white">COMPETITIONS</span>
                 </a></li>
                 <li class="nav-item hidden">
                 <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/reach_Us/">
@@ -230,7 +230,7 @@
             </li>
             <li class="nav-item">
               <a class="navbar-brand" style="font-size: 1vw" href="./pages/competitions/">
-                <span style="font-family: 'MyFont'; color: white">COMPETETIONS</span>
+                <span style="font-family: 'MyFont'; color: white">COMPETITIONS</span>
               </a>
             </li>
             <li class="nav-item">
