COMPETITION SPELLING CHANGES

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                       font-family: 'bomber-condensed' !important;
                       font-size: max(5vh, 6vw);
                     ">
-                  competetions
+                  competitions
                 </p>
                 <h1 style="
                       font-size: max(2vh, 1.5vw);
