COMPETITION SPELLING CHANGES, acoomdations name change, accomdations page change

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </li>
                 <li class="nav-item hidden">
                   <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/accomdations/index.html">
-                    <span style="font-family: 'MyFont'; color: white">ACCOMMODATIONS</span>
+                    <span style="font-family: 'MyFont'; color: white">STAY & PASSES</span>
                   </a>
                 </li>
                 <li class="nav-item hidden">
@@ -240,7 +240,7 @@
             </li>
             <li class="nav-item">
               <a class="navbar-brand" style="font-size: 1vw" href="./pages/accomdations/index.html">
-                <span style="font-family: 'MyFont'; color: white">ACCOMMODATIONS</span>
+                <span style="font-family: 'MyFont'; color: white">STAY & PASSES</span>
               </a>
             </li>
             <li class="nav-item">
