--- a/pages/coming_soon/index.html
+++ b/pages/coming_soon/index.html
@@ -56,7 +56,7 @@
 
           <li><a href="../competitions/">Competitions</a></li>
           <li><a href="../coming_soon/">Guests</a></li>
-          <li><a href="../accomdations/">accommodations</a></li>
+          <li><a href="../accomdations/">Stay & passes</a></li>
           <li><a href="../coming_soon/">Exhibits</a></li>
           <li><a href="https://witp.wissenaire.org/">Winter Internship</a></li>
           <li><a href="../workshops/">Workshops</a></li>
