--- a/pages/about_us/index.html
+++ b/pages/about_us/index.html
@@ -31,7 +31,7 @@
     <ul>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../accomdations/">accommodations</a></li>
+      <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
@@ -59,7 +59,7 @@
     <ul>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../accomdations/">accommodations</a></li>
+      <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
