--- a/pages/competitions/index.html
+++ b/pages/competitions/index.html
@@ -29,7 +29,7 @@
 
       <li><a href="../about_us/">About us</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../accomdations/">accommodations</a></li>
+      <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
@@ -61,7 +61,7 @@
 
       <li><a href="../about_us/">About us</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../accomdations/">accommodations</a></li>
+      <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
@@ -121,7 +121,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
 
@@ -163,7 +163,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -203,7 +203,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -241,7 +241,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -280,7 +280,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -323,7 +323,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -408,7 +408,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -568,7 +568,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -605,7 +605,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -644,7 +644,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
           <label>
@@ -693,7 +693,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -729,7 +729,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -767,7 +767,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -817,7 +817,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -856,7 +856,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -895,7 +895,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -936,7 +936,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="../accomdations/day2.html">
+              <a href="../accomdations/index.html">
                 <span class="button__text">Register</span></a>
             </button>
           </div>
