--- a/pages/reach_Us/index.html
+++ b/pages/reach_Us/index.html
@@ -34,7 +34,7 @@
       <li><a href="../about_us/">About Us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../accomdations/">accommodations</a></li>
+      <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
@@ -62,7 +62,7 @@
       <li><a href="../about_us/">About Us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../accomdations/">accommodations</a></li>
+      <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
