--- a/pages/teampage/index.html
+++ b/pages/teampage/index.html
@@ -33,7 +33,7 @@
       <li><a href="../about_us/">About us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../accomdations/">accommodations</a></li>
+      <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../under-construction-template-master/index.html">Iintiatives</a></li>
@@ -61,7 +61,7 @@
       <li><a href="../about_us/">About us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../accomdations/">accommodations</a></li>
+      <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
