--- a/pages/workshops/Webpages/ds.html
+++ b/pages/workshops/Webpages/ds.html
@@ -27,7 +27,7 @@
 
       <li><a href="../../about_us/">About us</a></li>
       <li><a href="../../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../../accomdations/">accommodations</a></li>
+      <li><a href="../../accomdations/">Stay and passes</a></li>
       <li><a href="../../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../../workshops/">Workshops</a></li>
       <li><a href="../../competitions/index.html">Competitions</a></li>
@@ -59,7 +59,7 @@
 
       <li><a href="../../about_us/">About us</a></li>
       <li><a href="../../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../../accomdations/">accommodations</a></li>
+      <li><a href="../../accomdations/">Stay and passes</a></li>
       <li><a href="../../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../../workshops/">Workshops</a></li>
       <li><a href="../../competitions/index.html">Competitions</a></li>
