--- a/pages/workshops/index.html
+++ b/pages/workshops/index.html
@@ -42,7 +42,7 @@
       <li><a href="../about_us/">About Us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/">Guests</a></li>
-      <li><a href="../accomdations/">accommodations</a></li>
+      <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/">Exhibits</a></li>
       <li><a href="../under-construction-template-master/">Initiatives</a></li>
       <li><a href="../under-construction-template-master/">Highlights</a></a></li>
@@ -78,7 +78,7 @@
       <li><a href="../about_us/">About Us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/">Guests</a></li>
-      <li><a href="../accomdations/">accommodations</a></li>
+      <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/">Exhibits</a></li>
       <li><a href="../under-construction-template-master/">Intiatives</a></li>
       <li><a href="../under-construction-template-master/">Highlights</a></a></li>
