--- a/pages/accomdations/index.html
+++ b/pages/accomdations/index.html
@@ -137,24 +137,24 @@ dinner) should be paid separately prior to visiting campus if required.<br>
 3. In Common rooms a maximum of 12 members will be accommodated.`,
         `
       <div style="display: flex;width: 100%;flex-direction: column;justify-content: space-evenly;">
-        <div style="display: flex;width: auto;text-align: center;">
-          <b style="color: aquamarine;">DAY</b>
-          <b style="color: aquamarine;">PRICE </b>
+        <div style="display: flex;width: auto;text-align: center;margin:15px;">
+          <b style="color: aquamarine;width:50%;">DAY</b>
+          <b style="color: aquamarine;width:50%;">PRICE </b>
         </div>
-        <div style="display: flex;width: auto;text-align: center;">
-          <b style="color: aqua;">Day-2(March-9th)</b>
-          <p> &#8377 299 only </p>
+        <div style="display: flex;width: auto;text-align: center;margin:15px;">
+          <b style="color: aqua;width:50%;">Day-2(March-9th)</b>
+          <p style="width:50%;"> &#8377 299 only </p>
         </div>
-        <div style="display: flex;width: auto;text-align: center;">
-          <b style="color: aqua;">Day-3(March-10th)</b>
-          <p> &#8377 399 only </p>
+        <div style="display: flex;width: auto;text-align: center;margin:15px;">
+          <b style="color: aqua;width:50%;">Day-3(March-10th)</b>
+          <p style="width:50%;"> &#8377 399 only </p>
         </div>
-        <div style="display: flex;width: auto;text-align: center;">
-          <b style="color: aqua;">Day-2+ Day-3 Combo</b>
-          <p> &#8377 499 only </p>
+        <div style="display: flex;width: auto;text-align: center;margin:15px;">
+          <b style="color: aqua;width:50%;">Day-2+ Day-3 Combo</b>
+          <p style="width:50%;"> &#8377 499 only </p>
         </div>
       </div>
-      <ul style="display: flex;flex-direction: column;list-style: circle;">
+      <ul style="display: flex;flex-direction: column;list-style: circle;margin-top:5vh;margin-bottom:5vh;">
         <li>
           <b style="color: aqua;">Day-2</b>
           pass includes entry passes to all competetions on
