--- a/pages/accomdations/index.html
+++ b/pages/accomdations/index.html
@@ -170,22 +170,36 @@ dinner) should be paid separately prior to visiting campus if required.<br>
         <b style="color: aqua;">NOTE:</b>
         Passes are mandatory for all those who did not apply for any workshops or accommodations.
       </b>
-      <div class="morph" style="display: flex;width: 100%;justify-content: space-evenly;margin-bottom: 10vh;">
+      <div class="laptop" style="display: flex;width: 100%;justify-content: space-evenly;margin-bottom: 10vh;">
         <div class="btn-container">
           <a href="https://forms.gle/LS7G6EXk1tJgKF8g7"
             style="display: flex;justify-content: center;text-decoration: underline;columns: #dadada;">
             <button class="btn custom-btn btn-5 register">
               <span style="align-items:center"> click
                 here</span>
-        </div>
-        </button></a>
+        </button></a></div>
         <div class="btn-container">
           <a href="./fonts/Accomodation and Passes.pdf" download="./fonts/Accomodation and Passes.pdf"
             style="display: flex;justify-content: center;text-decoration: underline;columns: #dadada;">
             <button class="btn custom-btn btn-5 register">
               <span style="align-items:center"> Know more</span>
-        </div>
-        </button></a>
+        
+        </button></a></div>
+      </div>
+      <div class="lap" style="display: flex;width: 100%;justify-content: space-evenly;margin-bottom: 5vh;flex-diectiom:column;">
+        <div class="btn-container">
+          <a href="https://forms.gle/LS7G6EXk1tJgKF8g7"
+            style="display: flex;justify-content: center;text-decoration: underline;columns: #dadada;">
+            <button class="btn custom-btn btn-5 register">
+              <span style="align-items:center"> click
+                here</span>
+        </button></a></div>
+        <div class="btn-container">
+          <a href="./fonts/Accomodation and Passes.pdf" download="./fonts/Accomodation and Passes.pdf"
+            style="display: flex;justify-content: center;text-decoration: underline;columns: #dadada;">
+            <button class="btn custom-btn btn-5 register">
+              <span style="align-items:center"> Know more</span>
+        </button></a></div>
       </div>
         
 `, `
