google form links workshops

--- a/pages/workshops/Webpages/Embedded_systems_with_Robotics_&_IoT.html
+++ b/pages/workshops/Webpages/Embedded_systems_with_Robotics_&_IoT.html
@@ -71,7 +71,7 @@
         <img src="../../../imagesnew/robot.jpg" alt="" class="picture">
       </div>
       <div class="btn-container">
-        <a href="https://rzp.io/l/Wembedd">
+        <a href="https://forms.gle/iZhdQ9BBbWdm25fU8">
           <button class="btn custom-btn btn-5 register">
             <span> REGISTER</span>
           </button>
