--- a/pages/workshops/Webpages/ds.html
+++ b/pages/workshops/Webpages/ds.html
@@ -76,7 +76,7 @@
         <img src="../../../imagesnew/data-scienc.jpg" alt="" class="picture">
       </div>
       <div class="btn-container">
-        <a href="https://rzp.io/l/WDataSC">
+        <a href="https://forms.gle/iZhdQ9BBbWdm25fU8">
           <button class="btn custom-btn btn-5 register">
             <span> REGISTER</span>
           </button>
