--- a/pages/workshops/Webpages/ui.html
+++ b/pages/workshops/Webpages/ui.html
@@ -70,7 +70,7 @@
         <img src="../../../imagesnew/ui.jpg" alt="" class="picture">
       </div>
       <div class="btn-container">
-        <a href="https://rzp.io/l/Wproduct">
+        <a href="https://forms.gle/iZhdQ9BBbWdm25fU8">
           <button class="btn custom-btn btn-5 register">
             <span> REGISTER</span>
           </button>
