--- a/pages/workshops/Webpages/Product_Management_and_Risk_Analysis_using_Oracle_Primavara.html
+++ b/pages/workshops/Webpages/Product_Management_and_Risk_Analysis_using_Oracle_Primavara.html
@@ -70,7 +70,7 @@
         <img src="../../../../imagesnew/stadd.jpeg" alt="" class="picture">
       </div>
       <div class="btn-container">
-        <a href="https://rzp.io/l/WProject">
+        <a href="https://forms.gle/iZhdQ9BBbWdm25fU8">
           <button class="btn custom-btn btn-5 register">
             <span> REGISTER</span>
           </button>
