button problem in accomdations

--- a/pages/accomdations/index.html
+++ b/pages/accomdations/index.html
@@ -129,7 +129,13 @@
       Single room-1849 Rs/-<br></div>
         </div>
         </div>
-        <br><br>
+        <br><br><div class="btn-container">
+          <a href="https://forms.gle/oAD4Hpxxjkt8iwhB8"
+            style="display: flex;justify-content: center;text-decoration: underline;columns: #dadada;">
+            <button class="btn custom-btn btn-5 register">
+              <span style="align-items:center"> click
+                here</span>
+        </div>
         <br><br>
       <b>NOTE</b>:<br>1. Extra charges of Rs.250 for food per day (Includes breakfast, lunch &
 dinner) should be paid separately prior to visiting campus if required.<br>
