--- a/pages/accomdations/index.html
+++ b/pages/accomdations/index.html
@@ -134,7 +134,7 @@
             style="display: flex;justify-content: center;text-decoration: underline;columns: #dadada;">
             <button class="btn custom-btn btn-5 register">
               <span style="align-items:center"> click
-                here</span>
+                here</span></a>
         </div>
         <br><br>
       <b>NOTE</b>:<br>1. Extra charges of Rs.250 for food per day (Includes breakfast, lunch &
