--- a/pages/teampage/index.html
+++ b/pages/teampage/index.html
@@ -1398,7 +1398,7 @@
         <div class="glass"></div>
         <div class="content">
           <span class="title">Sukeerthi</span>
-          <span class="text">Team Workshops</span>
+          <span class="text">Team Competitions</span>
         </div>
         <div class="bottom">
           <div class="social-buttons-container">
