--- a/pages/competitions/index.html
+++ b/pages/competitions/index.html
@@ -28,6 +28,7 @@
     <ul>
 
       <li><a href="../about_us/">About us</a></li>
+      <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
       <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
@@ -60,6 +61,7 @@
     <ul>
 
       <li><a href="../about_us/">About us</a></li>
+      <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
       <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
