--- a/pages/competitions/index.html
+++ b/pages/competitions/index.html
@@ -1113,7 +1113,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="https://rzp.io/l/Wfreefire"><span class="button__text">Register</span></a>
+              <a href="https://forms.gle/Yk61dmymDAk1cPQF8"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -1153,7 +1153,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="https://rzp.io/l/WValorant"><span class="button__text">Register</span></a>
+              <a href="https://forms.gle/Yk61dmymDAk1cPQF8"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -1192,7 +1192,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="https://rzp.io/l/Wbgmi"><span class="button__text">Register</span></a>
+              <a href="https://forms.gle/Yk61dmymDAk1cPQF8"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -1234,7 +1234,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <a href="https://rzp.io/l/WClashroyale"><span class="button__text">Register</span></a>
+              <a href="hhttps://forms.gle/Yk61dmymDAk1cPQF8"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
